# training-agentic-ai-linmotor

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  test_script.py
.claude/skills/typecheck/: SKILL.md
docs/: SCHULUNG.md
prompts/: halbach_ribble.md  peak_thrust.md
src/linmotor/: __init__.py  commutation.py  field.py  force.py  geometry.py  visualize.py
tests/: test_commutation.py  test_force.py  test_geometry.py  test_visualize.py
