[project]
name = "linmotor"
version = "0.2.0"
description = "2D-Auslegung eisenloser Linearmotoren (magpylib-basiert)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "magpylib>=5.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.10"]
mcp = ["mcp>=1.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linmotor"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true   # magpylib / matplotlib liefern keine vollständigen Stubs
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
